--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>MiniReddit Mejorado con eliminación</title>
+  <title>Rumoreon</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;700&display=swap');
 
@@ -331,7 +331,7 @@
   </style>
 </head>
 <body>
-  <h2>MiniReddit Mejorado con eliminación</h2>
+  <h2>Rumoreon</h2>
 
   <button id="openPostModalBtn">Crear post</button>
 
