--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Rumoreon</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;700&display=swap');
 
@@ -342,11 +343,7 @@
     <span></span>
   </div>
   <button class="info-btn" id="info-btn" title="Información">
-  <svg viewBox="0 0 24 24" fill="none">
-    <circle cx="12" cy="12" r="10" fill="#ff4500"/>
-    <rect x="11" y="10" width="2" height="6" rx="1" fill="#fff"/>
-    <rect x="11" y="7" width="2" height="2" rx="1" fill="#fff"/>
-  </svg>
+  <span class="material-icons">info</span>
 </button>
   <div class="menu" id="menu">
     <div id="menu-user-text" style="margin-bottom:10px;">
