--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
       transition: 0.3s;
     }
        .info-btn {
-  top: 56px;
+  top: 56px
+  position: fixed;
   right: 18px; /* MÁS a la derecha que antes */
   z-index: 1002;
   background: none;
