--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>Rumoreon</title>
-  <!-- IMPORTANTE: Material Icons de Google Fonts -->
+  <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Material Symbols Outlined for mail icon -->
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;700&display=swap');
     body {
@@ -97,7 +99,7 @@
     .info-btn {
       position: fixed;
       top: 56px;
-      right: 10px; /* MÁS a la derecha */
+      right: 54px;
       z-index: 1002;
       background: none;
       border: none;
@@ -116,6 +118,32 @@
       display: inline-block;
     }
     .info-btn:hover .material-icons {
+      background: #292929;
+      color: #ff7f50;
+    }
+    /* --- Botón mail (moderación) --- */
+    .mail-btn {
+      position: fixed;
+      top: 106px; /* debajo del info-btn */
+      right: 54px;
+      z-index: 1002;
+      background: none;
+      border: none;
+      cursor: pointer;
+      padding: 6px;
+    }
+    .mail-btn .material-symbols-outlined {
+      font-size: 2.3em;
+      color: #ff4500;
+      background: #181818;
+      border-radius: 50%;
+      box-shadow: 0 2px 12px #ff450033;
+      padding: 3px;
+      transition: background 0.2s, color 0.2s;
+      line-height: 1;
+      display: inline-block;
+    }
+    .mail-btn:hover .material-symbols-outlined {
       background: #292929;
       color: #ff7f50;
     }
@@ -317,6 +345,10 @@
   <button class="info-btn" id="info-btn" title="Información">
     <span class="material-icons">info</span>
   </button>
+  <!-- Botón mail (moderación) debajo del info-btn -->
+  <button class="mail-btn" id="mail-btn" title="Contactar moderación">
+    <span class="material-symbols-outlined">mail</span>
+  </button>
   <div class="menu" id="menu">
     <div id="menu-user-text" style="margin-bottom:10px;">
       <!-- Aquí se muestra el usuario si está logueado -->
@@ -392,6 +424,11 @@
         `);
         win.document.close();
       }
+    });
+
+    // Botón mail funcionalidad
+    document.getElementById('mail-btn').addEventListener('click', function() {
+      window.location.href = "moderacion.html";
     });
 
     const API_KEY = '$2a$10$W7r2d0gmDZE45aqzwLFbTumNYrlgnya.eify2ghIr2Ebrf0aupxWu';
