--- a/moderacion.html
+++ b/moderacion.html
@@ -2,33 +2,32 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Enviar Moderación</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Moderación</title>
   <style>
     body {
-      font-family: "Segoe UI", sans-serif;
-      background: #f8f8f8;
-      padding: 2em;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
       max-width: 600px;
       margin: auto;
-      color: #333;
+      padding: 2em;
     }
 
     h1 {
-      color: #c0392b;
+      color: #e67e22;
       font-size: 2em;
-      margin-bottom: 0.5em;
+      margin-bottom: 1em;
     }
 
     textarea {
       width: 100%;
       height: 200px;
       padding: 1em;
-      font-size: 1em;
       border: 1px solid #ccc;
       border-radius: 8px;
       resize: vertical;
-      margin-bottom: 1em;
+      font-size: 1em;
     }
 
     button {
@@ -36,41 +35,57 @@
       color: white;
       border: none;
       padding: 0.8em 2em;
-      font-size: 1.1em;
+      font-size: 1em;
       border-radius: 8px;
+      margin-top: 1em;
       cursor: pointer;
-      transition: background-color 0.3s ease;
     }
 
     button:hover {
       background-color: #d35400;
     }
+
+    .mensaje {
+      margin-top: 1em;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
 
-  <h1>Moderación</h1>
-  <p>¿Hay algo que deba revisarse en la web? Describe el problema aquí:</p>
-
-  <form id="modForm">
-    <textarea id="mensaje" placeholder="Escribe aquí tu mensaje..."></textarea>
+  <h1>Enviar mensaje de moderación</h1>
+  <form id="formulario" action="https://formspree.io/f/mwpbozgk" method="POST">
+    <textarea name="mensaje" placeholder="Escribe tu mensaje de moderación..." required></textarea>
     <button type="submit">Enviar</button>
+    <div class="mensaje" id="mensajeRespuesta"></div>
   </form>
 
   <script>
-    const correoDestino = "juliomercadal11@gmail.com"; // 🔁 Cambia esto por tu correo
+    const form = document.getElementById('formulario');
+    const mensajeRespuesta = document.getElementById('mensajeRespuesta');
 
-    document.getElementById("modForm").addEventListener("submit", function (e) {
+    form.addEventListener('submit', function(e) {
       e.preventDefault();
-      const mensaje = document.getElementById("mensaje").value.trim();
-      if (mensaje) {
-        const asunto = encodeURIComponent("Mensaje de Moderación");
-        const cuerpo = encodeURIComponent(mensaje);
-        const mailto = `mailto:${correoDestino}?subject=${asunto}&body=${cuerpo}`;
-        window.location.href = mailto;
-      } else {
-        alert("Por favor, escribe un mensaje antes de enviar.");
-      }
+      const data = new FormData(form);
+      fetch(form.action, {
+        method: "POST",
+        body: data,
+        headers: {
+          'Accept': 'application/json'
+        }
+      }).then(response => {
+        if (response.ok) {
+          mensajeRespuesta.textContent = "Mensaje enviado correctamente.";
+          mensajeRespuesta.style.color = "green";
+          form.reset();
+        } else {
+          mensajeRespuesta.textContent = "Error al enviar el mensaje.";
+          mensajeRespuesta.style.color = "red";
+        }
+      }).catch(error => {
+        mensajeRespuesta.textContent = "Error de red.";
+        mensajeRespuesta.style.color = "red";
+      });
     });
   </script>
 
