--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Material Symbols Outlined for mail icon -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+  <!-- FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;700&display=swap');
     body {
@@ -19,6 +23,7 @@
       user-select: none;
     }
     h2 {
+      font-family: 'Alfa Slab One', cursive;
       text-align: center;
       color: #ff4500;
       margin-bottom: 25px;
