--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       margin-bottom: 25px;
       font-weight: 2000;
       letter-spacing: 2px;
+      font-size: 4rem;
     }
     input, textarea {
       width: 100%;
