--- a/index.html
+++ b/index.html
@@ -323,6 +323,23 @@
       display: block;
     }
     /* --- FIN MODIFICACIÓN --- */
+
+    /* Checkbox alineado junto al texto Añadir votación */
+    .poll-label {
+      color: #ff7f50;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 7px;
+      margin-bottom: 0;
+      margin-top: 0;
+    }
+    .poll-label input[type="checkbox"] {
+      margin: 0;
+      accent-color: #ff4500;
+      width: 18px;
+      height: 18px;
+    }
     @keyframes modalpop {
       from { transform: translateY(-70px) scale(.95); opacity:0;}
       to { transform: translateY(0) scale(1); opacity:1;}
@@ -461,8 +478,8 @@
       <input type="file" id="modalPostFile" accept="image/*,video/mp4,video/webm,video/ogg" style="margin-bottom:12px; color:#eee;" />
       <!-- Sección de Votaciones -->
       <div id="pollSection" style="margin-bottom:12px;">
-        <label style="color:#ff7f50;font-weight:600;">
-          <input type="checkbox" id="enablePoll" style="vertical-align:middle;margin-right:5px;">
+        <label class="poll-label">
+          <input type="checkbox" id="enablePoll">
           Añadir votación
         </label>
         <div id="pollOptionsContainer" style="display:none;margin-top:8px;">
